<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.udacity.stockhawk.ui.DetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_price"
            style="@style/DetailPriceTextStyle"
            tools:text="811.98" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:id="@+id/detail_change_abs"
            style="@style/DetailChangeTextStyle"
            android:layout_marginStart="@dimen/detail_activity_label_margin"
            tools:textColor="@color/material_green_700"
            tools:text="+9"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:id="@+id/detail_change_pc"
            style="@style/DetailChangeTextStyle"
            android:layout_marginStart="@dimen/detail_activity_label_margin"
            tools:textColor="@color/material_green_700"
            tools:text="+1.08%"/>
    </LinearLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:columnCount="4"
        android:rowCount="5"
        android:layout_marginTop="@dimen/detail_activity_view_margin">
        <!-- row 1 -->
        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnWeight="2"
            android:text="@string/detail_open"
            android:contentDescription="@string/detail_open_desc"
            style="@style/DetailLabelTextStyle"/>
        <TextView
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="center"
            android:id="@+id/open_value_text"
            style="@style/DetailValueTextStyle"
            tools:text="802.31"/>
        <TextView
            android:layout_column="2"
            android:layout_row="0"
            android:layout_columnWeight="2"
            android:layout_marginStart="@dimen/detail_activity_label_margin"
            style="@style/DetailLabelTextStyle"
            android:text="@string/detail_mktcap"
            android:contentDescription="@string/detail_mktcap_desc"
            />
        <TextView
            android:layout_column="3"
            android:layout_row="0"
            android:layout_gravity="center"
            style="@style/DetailValueTextStyle"
            android:id="@+id/mktcap_value_text"
            tools:text="5.5M"
            />
        <!-- row 2 -->
        <TextView
            android:layout_column="0"
            android:layout_row="1"
            android:layout_columnWeight="2"
            android:text="@string/detail_dayhigh"
            android:contentDescription="@string/detail_dayhigh_desc"
            style="@style/DetailLabelTextStyle"/>
        <TextView
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="center"
            android:id="@+id/dayhigh_value_text"
            style="@style/DetailValueTextStyle"
            tools:text="805.31"/>
        <TextView
            android:layout_column="2"
            android:layout_row="1"
            android:layout_columnWeight="2"
            android:layout_marginStart="@dimen/detail_activity_label_margin"
            style="@style/DetailLabelTextStyle"
            android:text="@string/detail_yearhigh"
            android:contentDescription="@string/detail_yearhigh_desc"
            />
        <TextView
            android:layout_column="3"
            android:layout_row="1"
            android:layout_gravity="center"
            style="@style/DetailValueTextStyle"
            android:id="@+id/yrhigh_value_text"
            tools:text="811.5"
            />
        <!-- row 3 -->
        <TextView
            android:layout_column="0"
            android:layout_row="2"
            android:layout_columnWeight="2"
            android:text="@string/detail_daylow"
            android:contentDescription="@string/detail_daylow_desc"
            style="@style/DetailLabelTextStyle"/>
        <TextView
            android:layout_column="1"
            android:layout_row="2"
            android:layout_gravity="center"
            android:id="@+id/daylow_value_text"
            style="@style/DetailValueTextStyle"
            tools:text="800.31"/>
        <TextView
            android:layout_column="2"
            android:layout_row="2"
            android:layout_columnWeight="2"
            android:layout_marginStart="@dimen/detail_activity_label_margin"
            style="@style/DetailLabelTextStyle"
            android:text="@string/detail_yearlow"
            android:contentDescription="@string/detail_yearlow_desc"
            />
        <TextView
            android:layout_column="3"
            android:layout_row="2"
            android:layout_gravity="center"
            style="@style/DetailValueTextStyle"
            android:id="@+id/yrlow_value_text"
            tools:text="608.02"
            />
        <!-- row 4 -->
        <TextView
            android:layout_column="0"
            android:layout_row="3"
            android:layout_columnWeight="2"
            android:text="@string/detail_volume"
            android:contentDescription="@string/detail_volume_desc"
            style="@style/DetailLabelTextStyle"/>
        <TextView
            android:layout_column="1"
            android:layout_row="3"
            android:layout_gravity="center"
            android:id="@+id/vol_value_text"
            style="@style/DetailValueTextStyle"
            tools:text="5M"/>
        <TextView
            android:layout_column="2"
            android:layout_row="3"
            android:layout_columnWeight="2"
            android:layout_marginStart="@dimen/detail_activity_label_margin"
            style="@style/DetailLabelTextStyle"
            android:text="@string/detail_avg_volumne"
            android:contentDescription="@string/detail_avg_volume_desc"
            />
        <TextView
            android:layout_column="3"
            android:layout_row="3"
            android:layout_gravity="center"
            style="@style/DetailValueTextStyle"
            android:id="@+id/avgvol_value_text"
            tools:text="5.5M"
            />
        <!-- row 5 -->
        <TextView
            android:layout_column="0"
            android:layout_row="4"
            android:layout_columnWeight="2"
            android:text="@string/detail_eps"
            android:contentDescription="@string/detail_eps_desc"
            style="@style/DetailLabelTextStyle"/>
        <TextView
            android:layout_column="1"
            android:layout_row="4"
            android:layout_gravity="center"
            android:id="@+id/eps_value_text"
            style="@style/DetailValueTextStyle"
            tools:text="33.05"/>
        <TextView
            android:layout_column="2"
            android:layout_row="4"
            android:layout_columnWeight="2"
            android:layout_marginStart="@dimen/detail_activity_label_margin"
            style="@style/DetailLabelTextStyle"
            android:text="@string/detail_pe"
            android:contentDescription="@string/detail_pe_desc"
            />
        <TextView
            android:layout_column="3"
            android:layout_row="4"
            android:layout_gravity="center"
            style="@style/DetailValueTextStyle"
            android:id="@+id/pe_value_text"
            tools:text="0.5%"
            />
    </GridLayout>
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/linechart"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
